[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astridr-tools"
version = "0.1.0"
description = "Extracted tool modules from the Astridr AI agent framework"
requires-python = ">=3.11"
authors = [
    { name = "Larry Mandras", email = "mandrasle@gmail.com" },
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
